# Matrix

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: workflow.yml
include/: matrix.hpp  two_dim_array.hpp
src/: main.cpp  matrix_gen.cpp
test/: CMakeLists.txt  det_test.hpp  matrix_test.cpp  matrix_test.hpp
test/end2end/: run_e2e.sh
